@@ -1,0 +1,7 @@
+#ifndef __HELLO_H__
+#define __HELLO_H__
+
+// Let's have a prototype for our export!
+void hello(void);
+
+#endif
