@@ -1,0 +1,11 @@
+DECLARE_EXPORT_TABLE(hello, 1, 1)
+        DECLARE_EXPORT(_start)
+        DECLARE_EXPORT(_retonly)
+        DECLARE_EXPORT(_retonly)
+        DECLARE_EXPORT(_retonly)
+
+        /* 4 */
+        DECLARE_EXPORT(hello)
+END_EXPORT_TABLE
+
+void _retonly() {}
