@@ -8,6 +8,9 @@
 #
 # $Id$
 
+2005-01-03
+  - pixel, started a small skeleton, put a hello.irx file there.
+
 2005-01-02
   - herben, added volatiles counterparts to tamtypes.h
 
